# da_song_ge

./: .envrc  .gitignore  BUILD_GUIDE.md  GitHub_Actions使用指南.md  PACKAGING.md  PROJECT_SUMMARY.md  README_REMOTE_DEPLOY.md  UPDATE_SSH_AUTH.md  Windows兼容性问题修复总结.md  Windows编码问题修复说明.md  Windows闪退问题修复.md  build.py  main.py  pyproject.toml  pyrightconfig.json  release.sh  requirements.txt  test_cold_start.sh  test_detailed_timing.py  test_import_speed.py  test_performance.sh  xxxx.html  完整解决方案总结.md  快速发布指南.md  打包成功总结.md
.github/workflows/: build.yml
.kiro/: design.md  requirements.md  tasks.md
common/: __init__.py  env_utils.py  log_utils.py  path_utils.py  progress.py  ssh_client.py
deploy_tool/scripts/: test_upload.py
examples/progress/: rich_demo.py
remote_deploy/: LOCAL_COMMANDS_QUICKSTART.md  LOCAL_COMMANDS_README.md  __init__.py  command_executor.py  config.yaml  config.yaml.example  config2.yaml  config_manager.py  deploy_service copy.py  deploy_service.py  file_uploader.py  license_validator.py  local_command_executor.py  local_commands_example.yaml  local_deploy.sh  test.sh  test_quick.py  validate_config.py
